Removed maze data textbox as its no longer needed with bdungly-buddy companion app. Greatly increased readability etc

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   padding: 0;
 }
 
+/* Uses flexbox to order and place the tiles */
 body {
   font: "Poppins", sans-serif;
   font-size: 16px;
@@ -57,6 +58,7 @@ body {
   transform-origin: top center;
 }
 
+/* animation for the individual tiles */
 @keyframes show {
   100% {
     opacity: 1;
@@ -64,8 +66,8 @@ body {
   }
 }
 
+/* Styles for the maze tiles */
 /* Corner Tiles */
-
 ._3 {
   border-right: solid;
   border-top: solid;
@@ -190,6 +192,7 @@ body {
   border: 1px solid #193a19a6;
 }
 
+/* Button styles */
 .ui {
   display: flex;
   align-items: flex-start;
@@ -212,13 +215,4 @@ body {
   margin-right: 3px;
   padding: 3px;
   font-size: 20px;
-}
-
-.resizedTextbox {
-  font-family: "Arial", sans-serif;
-  border-radius: 10px;
-  width: 200px;
-  height: 10vh;
-  font-size: 2vh;
-  margin-right: 5px;
 }
